feat: almost there

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Import pixelated fonts */
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
